Minor bug fixes

--- a/src/index.css
+++ b/src/index.css
@@ -499,7 +499,7 @@ body {
   background-color: #f3c353;
   color: #000;
   font-size: 16px;
-  padding: 10px 20px;
+  padding: 0 20px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -507,6 +507,9 @@ body {
   transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
   user-select: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   &:hover {
     background-color: #deb34c;
