Client-side routing now works for the footer and the dropdown menus

--- a/src/index.css
+++ b/src/index.css
@@ -224,7 +224,7 @@ a {
 
 /* When displaying success messages */
 .SuccessText {
-  color: #39ff14;
+  color: #00dd00;
   font-size: 15;
   padding: 10px;
   text-align: center;
