--- a/src/index.css
+++ b/src/index.css
@@ -262,7 +262,14 @@ a {
   text-decoration: none;
   color: #fff;
   padding: 8px;
-  font-size: 12px;
+
+  &:hover {
+    color: #eee;
+  }
+
+  &:active {
+    color: #aaa;
+  }
 }
 
 /* For displaying user settings and details */
