Added compressed share links, for the trending comparisons page I'm still going to use uncompressed links for SEO reasons. Also added a progreess bar to the add comparison item modal in case user feels like there are too many steps, so they can see their progress, which keeps them engaged.

--- a/src/index.css
+++ b/src/index.css
@@ -252,6 +252,21 @@ a {
   }
 }
 
+/* Progress bar */
+.progress {
+  width: 80%;
+  background-color: #e0e0e0;
+  border-radius: 5px;
+  overflow: hidden;
+  margin-top: 10px;
+}
+
+.progress-bar {
+  height: 20px;
+  background-color: #4ca0d7; /* Change to your preferred color */
+  transition: width 0.3s ease;
+}
+
 /* For the footer mainly, or anything that's just the opposite of the user color scheme */
 .ReversePlainText {
   color: #fff;
