--- a/src/index.css
+++ b/src/index.css
@@ -230,6 +230,7 @@ a {
   padding: 10px;
   text-align: center;
 }
+
 /* Buffer animation */
 .ActivityIndicator {
   margin: 0 auto;
@@ -252,7 +253,7 @@ a {
   }
 }
 
-/* Progress bar */
+/* Progress bar background */
 .progress {
   width: 80%;
   background-color: #e0e0e0;
@@ -261,6 +262,7 @@ a {
   margin-top: 10px;
 }
 
+/* Progress bar actual progress */
 .progress-bar {
   height: 20px;
   background-color: #4ca0d7; /* Change to your preferred color */
@@ -408,7 +410,7 @@ a {
   font-size: 16px;
   font-weight: 600;
   padding: 10px 15px;
-  margin: 0 5px; /* centers the buttons */
+  margin: 0 3px; /* centers the buttons */
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -418,8 +420,7 @@ a {
   max-height: 71px;
   display: flex;
   align-items: center;
-  text-align: center;
-  max-width: 40%;
+  justify-content: center;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 
   &:hover {
@@ -427,6 +428,63 @@ a {
   }
   &:active {
     background-color: #206090;
+  }
+}
+
+/* For the share button at the top of the compare screens */
+.ShareTopButton {
+  background-color: rgb(60, 173, 25);
+  color: #fff;
+  font-size: 16px;
+  font-weight: 600;
+  padding: 10px 15px;
+  margin: 0 3px; /* centers the buttons */
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  outline: none;
+  user-select: none;
+  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+  max-height: 71px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+
+  &:hover {
+    background-color: rgb(45, 150, 25);
+  }
+  &:active {
+    background-color: rgb(35, 130, 25);
+  }
+}
+
+/* For the reset button at the top of the compare screens */
+.ResetTopButton {
+  background-color: #d6491a;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 600;
+  padding: 10px 15px;
+  margin: 0 3px; /* centers the buttons */
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  outline: none;
+  user-select: none;
+  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+  max-height: 71px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+
+  &:hover {
+    background-color: #cd2626;
+  }
+
+  &:active {
+    background-color: #751400;
   }
 }
 
