--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ a {
 /* For divs that take up the main part of the screen, the main content */
 .LargeContainer {
   display: flex;
-  background-color: #171827;
+  background-color: #1e2033;
   align-items: center;
   justify-content: center;
   flex-direction: column;
@@ -31,7 +31,7 @@ a {
 .PredictionContainer {
   display: flex;
   flex-direction: column;
-  background-color: #171827;
+  background-color: #1e2033;
   padding-bottom: 50px;
 }
 
@@ -47,7 +47,7 @@ a {
   border-color: #000;
   display: flex;
   flex-direction: column;
-  width: 70%; /* Adjust width as per your design */
+  width: 70%;
   position: fixed; /* Position it relative to the viewport */
   top: 50%; /* Align the top edge of the modal at 50% of viewport height */
   left: 50%; /* Align the left edge of the modal at 50% of viewport width */
@@ -76,7 +76,7 @@ a {
 
 /* The whole user account screen */
 .UserAccountScreen {
-  background-color: #171827;
+  background-color: #1e2033;
   display: flex;
   flex-direction: row;
   padding-bottom: 50px;
@@ -85,7 +85,7 @@ a {
 
 /* The whole user account screen for mobile */
 .UserAccountScreenMobile {
-  background-color: #171827;
+  background-color: #1e2033;
   display: flex;
   flex-direction: row;
   padding-bottom: 50px;
@@ -300,7 +300,7 @@ a {
   padding-left: 15px;
   padding-right: 15px;
   color: #fff;
-  background-color: #171827;
+  background-color: #1e2033;
   flex-grow: 1;
   white-space: pre-wrap;
 }
@@ -576,7 +576,7 @@ a {
 
 /* Buttons on the user account page */
 .AccountButton {
-  background-color: #171827;
+  background-color: #1e2033;
   color: #fff;
   font-size: 16px;
   font-weight: 600;
@@ -717,4 +717,50 @@ a {
 /* DONT RENAME THE DROPDOWNS OR IT STOPS WORKING ??*/
 .dropdown-menu li a:hover {
   background-color: #f1f1f1;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+  border-radius: 34px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  background-color: gray;
+  border-radius: 34px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  border-radius: 34px;
+}
+
+input:checked + .slider {
+  background-color: rgb(60, 173, 25);
+}
+
+input:checked + .slider:before {
+  transform: translateX(26px);
 }
