Significantly changed the home page so it's easier to find the price prediction tool

--- a/src/index.css
+++ b/src/index.css
@@ -166,6 +166,15 @@ a {
   background-color: #030612;
 }
 
+/* Each tool on the home page goes in one of these */
+.ToolContainer {
+  border-radius: 10px;
+  min-width: 310px;
+  padding: 10px;
+  display: grid;
+  justify-content: center;
+}
+
 /* The product names and VS text */
 .TrendingComparisonText {
   color: #fff;
